Functions Changed to Details

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -19,6 +19,8 @@ noDataText=No data available
 
 
 # Filter Section #
+
+fgHeaderGroup=Filter
 HeadingTitle=Shippings Requests List
 fgShippingRequestItem=Shipping Request Id
 fgShippingRequestIdPlaceholder=Enter Shipping Request Id
