--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -18,6 +18,7 @@ btnCloseTooltip=schließen
 noDataText=Keine Daten verfügbar
 
 # Filter Section #
+fgHeaderGroup=Filter
 HeadingTitle=Liste der Transportanforderungen
 fgShippingRequestItem=Transportanforderungs-ID
 fgShippingRequestIdPlaceholder=Transportanforderungs-ID eingeben
