--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -18,6 +18,7 @@ btnCloseTooltip=fechar
 noDataText=Sem dados disponíveis
 
 # Filter Section #
+fgHeaderGroup=Filter
 HeadingTitle=Lista de Solicitações de Transporte
 fgShippingRequestItem=ID da Solicitação de Transporte
 fgShippingRequestIdPlaceholder=Insira o ID da Solicitação de Transporte
