Stable Version Still

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -179,3 +179,9 @@ lvStatusChangedSuccessfully=Status for Shipping Request No {0} changed successfu
 lvShippingRequestAlreadyCancelled=Shipping Request No {0} is already cancelled
 lvConfirmCancelShippingRequest=Would you like to cancel the selected Shipping Request {0}?
 lvStatusCancelledSuccessfully=Status for Shipping Request No {0} cancelled successfully.
+
+
+#Not Found #
+NotFound=Not Found
+NotFound.text=Sorry, but the requested resource is not available.
+NotFound.description=Please check the URL and try again.
