--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -150,3 +150,8 @@ ptlBtnClose=Schließen
 # Formatter #
 formatterSelectItems=Wählen Sie die Artikel aus, um {0} einen Kommissionierungsauftrag zu erstellen
 formatterSelectHowManyItems=Wählen Sie aus​⬤
+
+# Not Found #
+NotFound=Nicht Gefunden
+NotFound.text=Entschuldigung, aber die angeforderte Ressource ist nicht verfügbar.
+NotFound.description=Bitte überprüfen Sie die URL und versuchen Sie es erneut.
