--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -175,3 +175,8 @@ lvStatusChangedSuccessfully=Status da Solicitação de Transporte Nº {0} altera
 lvShippingRequestAlreadyCancelled=Solicitação de Transporte Nº {0} já está cancelada
 lvConfirmCancelShippingRequest=Você gostaria de cancelar a Solicitação de Transporte selecionada {0}?
 lvStatusCancelledSuccessfully=Status da Solicitação de Transporte Nº {0} cancelado com sucesso.
+
+# Not Found #
+NotFound=Não Encontrado
+NotFound.text=Desculpe, mas o recurso solicitado não está disponível.
+NotFound.description=Por favor, verifique o URL e tente novamente.
