--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -91,6 +91,7 @@ dtTitle=Items
 dtDeliveryNr=Delivery Nr
 dtDeliveryItem=Item
 dtMaterial=Material
+dtPickingTaskId=Picking Task Id
 
 # Picking Task Detail #
 ptSubTitlePickTask=Picking Task
