--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -88,6 +88,7 @@ dtTitle=Artikel
 dtDeliveryNr=Liefernummer
 dtDeliveryItem=Artikel
 dtMaterial=Material
+dtPickingTaskId=Kommissionierungsauftrag-ID
 
 # Picking Task Detail #
 ptSubTitlePickTask=Kommissionierungsauftrag
