--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -88,6 +88,7 @@ dtTitle=Itens
 dtDeliveryNr=Número de Entrega
 dtDeliveryItem=Item
 dtMaterial=Material
+dtPickingTaskId=Id da Tarefa de Coleta
 
 # Picking Task Detail #
 ptSubTitlePickTask=Tarefa de Coleta
