--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -93,6 +93,8 @@ dtDeliveryItem=Item
 dtMaterial=Material
 dtPickingTaskId=Picking Task Id
 
+dtStatus=Status
+
 # Picking Task Detail #
 ptSubTitlePickTask=Picking Task
 ptSubTitleMaterial=Material
@@ -120,9 +122,11 @@ ptSsMaterialDescription=Description:
 ptSsGrossWeight=Gross Weight:
 
 ptSsPickingTask=Picking Task:
+ptSsVersion=Version:
 ptSsQtyPicked=Quantity Picked:
 ptSsStatus=Status:
 ptSsUser=User:
+ptSsProgress=Progress:
 
 # History Dialog #
 hdTitle=History
@@ -160,7 +164,7 @@ formatterInPickingAItem=When picking an item, all items assigned to the same pic
 # Picking Task Detail Controller #
 ptdWarningNoData=No data found for the given DELIVERY_NR, DELIVERY_ITEM_NR and MATERIAL_NR in ZRFSFBPCDS0002
 pdtErrorFetchingData=Error fetching data
-pdtErroGettingSelectedItems=Error getting selected items
+pdtErroGettingSelectedItems=Select at least one item to proceed
 pdtSelectAtLeastOneItem=Select at least one item to proceed
 pdtNoItemsSelected=No items selected
 pdtErrorFetchingPickingTaskId=Error fetching Picking Task Id
