--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -90,6 +90,8 @@ dtDeliveryItem=Artikel
 dtMaterial=Material
 dtPickingTaskId=Kommissionierungsauftrag-ID
 
+dtStatus=Status
+
 # Picking Task Detail #
 ptSubTitlePickTask=Kommissionierungsauftrag
 ptSubTitleMaterial=Material
@@ -117,9 +119,11 @@ ptSsMaterialDescription=Beschreibung:
 ptSsGrossWeight=Bruttogewicht:
 
 ptSsPickingTask=Kommissionierungsauftrag:
+ptSsVersion=Version:
 ptSsQtyPicked=Kommissionierte Menge:
 ptSsStatus=Status:
 ptSsUser=Benutzer:
+ptSsProgress=Fortschritt:
 
 # History Dialog #
 hdTitle=Verlauf
@@ -156,3 +160,5 @@ formatterSelectHowManyItems=Wählen Sie aus​⬤
 NotFound=Nicht Gefunden
 NotFound.text=Entschuldigung, aber die angeforderte Ressource ist nicht verfügbar.
 NotFound.description=Bitte überprüfen Sie die URL und versuchen Sie es erneut.
+
+pdtErroGettingSelectedItems=Beim Abrufen der ausgewählten Artikel ist ein Fehler aufgetreten
