--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -90,6 +90,8 @@ dtDeliveryItem=Item
 dtMaterial=Material
 dtPickingTaskId=Id da Tarefa de Coleta
 
+dtStatus=Status
+
 # Picking Task Detail #
 ptSubTitlePickTask=Tarefa de Coleta
 ptSubTitleMaterial=Material
@@ -117,9 +119,11 @@ ptSsMaterialDescription=Descrição:
 ptSsGrossWeight=Peso Bruto:
 
 ptSsPickingTask=Tarefa de Coleta:
+ptSsVersion=Versão:
 ptSsQtyPicked=Quantidade Coletada:
 ptSsStatus=Status:
 ptSsUser=Usuário:
+ptSsProgress=Progresso:
 
 # History Dialog #
 hdTitle=Histórico
@@ -156,7 +160,7 @@ formatterInPickingAItem=Ao coletar um item, todos os itens atribuídos à mesma 
 # Picking Task Detail Controller #
 ptdWarningNoData=Não foram encontrados dados para o DELIVERY_NR, DELIVERY_ITEM_NR e MATERIAL_NR fornecidos em ZRFSFBPCDS0002
 pdtErrorFetchingData=Erro ao buscar dados
-pdtErroGettingSelectedItems=Erro ao obter itens selecionados
+pdtErroGettingSelectedItems=Selecione pelo menos um item para prosseguir
 pdtSelectAtLeastOneItem=Selecione pelo menos um item para prosseguir
 pdtNoItemsSelected=Nenhum item selecionado
 pdtErrorFetchingPickingTaskId=Erro ao buscar o ID da Tarefa de Coleta
