History Quantity Fixed

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -139,11 +139,12 @@ hdMaterial=Material
 hdQuantity=Quantity
 hdQtyPicked=Quantity Picked
 hdUser=User
-hdPickingTaskStatus=Status
+hdPickingTaskStatus=Task Status
 hdStatusDone=Done
 hdStatusProcessing=Processing
 hdStatusRestarted=Restarted
 hdUserNotAssigned=User not assigned
+hdLatestVersion=Latest
 btnClose=Close
 
 
