--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -136,11 +136,12 @@ hdMaterial=Material
 hdQuantity=Menge
 hdQtyPicked=Kommissionierte Menge
 hdUser=Benutzer
-hdPickingTaskStatus=Status
+hdPickingTaskStatus=Status der Aufgabe 
 hdStatusDone=Abgeschlossen
 hdStatusProcessing=In Bearbeitung
 hdStatusRestarted=Neugestartet
 hdUserNotAssigned=Benutzer nicht zugewiesen
+hdLatestVersion=Aktuell
 btnClose=Schließen
 
 # Picking Task List Dialog #
