--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -136,11 +136,12 @@ hdMaterial=Material
 hdQuantity=Quantidade
 hdQtyPicked=Quantidade Coletada
 hdUser=Usuário
-hdPickingTaskStatus=Status
+hdPickingTaskStatus=Status Tarefa
 hdStatusDone=Concluído
 hdStatusProcessing=Processando
 hdStatusRestarted=Reiniciado
 hdUserNotAssigned=Usuário não atribuído
+hdLatestVersion=Atual
 btnClose=Fechar
 
 # Picking Task List Dialog #
