App almost ready to present

--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -5,6 +5,8 @@
 #XTIT: Application name
 appTitle=Transportanforderung
 
+pickingTask=Kommissionierungsauftrag
+
 #YDES: Application description
 appDescription=Transportanforderungsmonitor
 #XTIT: Main view title
@@ -19,7 +21,7 @@ noDataText=Keine Daten verfügbar
 
 # Filter Section #
 fgHeaderGroup=Filter
-HeadingTitle=Liste der Transportanforderungen
+HeadingTitle=Transportanforderungen
 fgShippingRequestItem=Transportanforderungs-ID
 fgShippingRequestIdPlaceholder=Transportanforderungs-ID eingeben
 fgShippingRequestIdTooltip=Transportanforderungs-ID eingeben
