--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -5,6 +5,8 @@
 #XTIT: Application name
 appTitle=Solicitação de Transporte
 
+pickingTask=Tarefa de Coleta
+
 #YDES: Application description
 appDescription=Monitor de Solicitação de Transporte
 #XTIT: Main view title
@@ -19,7 +21,7 @@ noDataText=Sem dados disponíveis
 
 # Filter Section #
 fgHeaderGroup=Filter
-HeadingTitle=Lista de Solicitações de Transporte
+HeadingTitle=Solicitações de Transporte
 fgShippingRequestItem=ID da Solicitação de Transporte
 fgShippingRequestIdPlaceholder=Insira o ID da Solicitação de Transporte
 fgShippingRequestIdTooltip=Insira o ID da Solicitação de Transporte
