--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,6 +5,8 @@
 #XTIT: Application name
 appTitle=Shipping Request
 
+pickingTask=Picking Task
+
 #YDES: Application description
 appDescription=Shipping Request Monitor
 #XTIT: Main view title
@@ -21,7 +23,7 @@ noDataText=No data available
 # Filter Section #
 
 fgHeaderGroup=Filter
-HeadingTitle=Shippings Requests List
+HeadingTitle=Shipping Requests
 fgShippingRequestItem=Shipping Request Id
 fgShippingRequestIdPlaceholder=Enter Shipping Request Id
 fgShippingRequestIdTooltip=Enter Shipping Request Id
