--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -193,3 +193,24 @@ lvStatusCancelledSuccessfully=Status for Shipping Request No {0} cancelled succe
 NotFound=Not Found
 NotFound.text=Sorry, but the requested resource is not available.
 NotFound.description=Please check the URL and try again.
+
+#Material Info#
+miCreatedBy=Created by:
+miCreatedAt=Created at:
+miMaterialInfo=Material Information
+miLastModifiedBy=Last Modified by:
+miLastModifiedAt=Last Modified at:
+miGeneralInfo=General Information
+miProductType=Product Type:
+miMaterialDescription=Material Description:
+miLanguage=Language:
+miUOM=Unit of Measure:
+miWeightUnit=Weight Unit:
+miNetWeight=Net Weight:
+miGrossWeight=Gross Weight:
+miBusinessInfo=Business Information
+miIndustrialSector=Industrial Sector:
+miMerchandiseGroup=Merchandise Group:
+miProductUUID=Product UUID:
+miProductSupplyUUID=Product Supply UUID:
+miNoDescription=No description
