--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -165,3 +165,24 @@ NotFound.text=Entschuldigung, aber die angeforderte Ressource ist nicht verfügb
 NotFound.description=Bitte überprüfen Sie die URL und versuchen Sie es erneut.
 
 pdtErroGettingSelectedItems=Beim Abrufen der ausgewählten Artikel ist ein Fehler aufgetreten
+
+#Materialinformationen#
+miCreatedBy=Erstellt von
+miCreatedAt=Erstellt am
+miMaterialInfo=Materialinformationen
+miLastModifiedBy=Zuletzt geändert von:
+miLastModifiedAt=Zuletzt geändert am:
+miGeneralInfo=Allgemeine Informationen
+miProductType=Produkttyp:
+miMaterialDescription=Materialbeschreibung:
+miLanguage=Sprache:
+miUOM=Maßeinheit:
+miWeightUnit=Gewichtseinheit:
+miNetWeight=Nettogewicht:
+miGrossWeight=Bruttogewicht:
+miBusinessInfo=Geschäftsinformationen
+miIndustrialSector=Industriesektor:
+miMerchandiseGroup=Warengruppe:
+miProductUUID=Produkt-UUID:
+miProductSupplyUUID=Produktversorgung-UUID:
+miNoDescription=Keine Beschreibung verfügbar
