--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -188,3 +188,24 @@ lvStatusCancelledSuccessfully=Status da Solicitação de Transporte Nº {0} canc
 NotFound=Não Encontrado
 NotFound.text=Desculpe, mas o recurso solicitado não está disponível.
 NotFound.description=Por favor, verifique o URL e tente novamente.
+
+#Informações do Material#
+miCreatedBy=Criado por:
+miCreatedAt=Criado em:
+miMaterialInfo=Informações do Material
+miLastModifiedBy=Última modificação por:
+miLastModifiedAt=Última modificação em:
+miGeneralInfo=Informações Gerais
+miProductType=Tipo de Produto:
+miMaterialDescription=Descrição do Material:
+miLanguage=Idioma:
+miUOM=Unidade de Medida:
+miWeightUnit=Unidade de Peso:
+miNetWeight=Peso Líquido:
+miGrossWeight=Peso Bruto:
+miBusinessInfo=Informações de Negócio
+miIndustrialSector=Setor Industrial:
+miMerchandiseGroup=Grupo de Mercadorias:
+miProductUUID=UUID do Produto:
+miProductSupplyUUID=UUID de Suprimento do Produto:
+miNoDescription=Sem descrição
