Checkout Confirmation ID's Dialog Created

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -106,6 +106,8 @@ ptDhDeliveryItem=Item:
 ptDhMaterial=Material:
 ptDhIconHistoryText=history
 ptDhIconHistoryTooltip=history
+ptDhIconCheckoutConfirmationText=Checkout Confirmation IDs
+ptDhIconCheckoutConfirmationTooltip=Checkout Confirmation IDs
 ptDhIconCreateText=Create
 ptDhIconCreateTooltip=create
 ptDhIconRestartText=Restart
@@ -214,3 +216,14 @@ miMerchandiseGroup=Merchandise Group:
 miProductUUID=Product UUID:
 miProductSupplyUUID=Product Supply UUID:
 miNoDescription=No description
+
+# Check Confirmation Dialog #
+checkoutConfirmationTitle=Checkout Confirmation IDs
+ccConfirmationId=Confirmation ID
+ccConfirmationRead=Confirmation Read
+ccPickingTaskId=Picking Task ID
+ccPickingTaskVersion=Picking Task Version
+ccShippingRequestId=Shipping Request ID
+ccMaterial=Material
+ccQuantity=Quantity
+ccUom=Unit of Measure
