--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -103,6 +103,8 @@ ptDhDeliveryItem=Artikel:
 ptDhMaterial=Material:
 ptDhIconHistoryText=Verlauf
 ptDhIconHistoryTooltip=Verlauf
+ptDhIconCheckoutConfirmationText=Checkout-Bestätigung
+ptDhIconCheckoutConfirmationTooltip=Checkout-Bestätigung
 ptDhIconCreateText=Erstellen
 ptDhIconCreateTooltip=erstellen
 ptDhIconRestartText=Neustarten
@@ -186,3 +188,15 @@ miMerchandiseGroup=Warengruppe:
 miProductUUID=Produkt-UUID:
 miProductSupplyUUID=Produktversorgung-UUID:
 miNoDescription=Keine Beschreibung verfügbar
+
+
+# Bestätigungsdialog prüfen #
+checkoutConfirmationTitle=Checkout-Bestätigungs-IDs
+ccConfirmationId=Bestätigungs-ID
+ccConfirmationRead=Bestätigung gelesen
+ccPickingTaskId=Kommissionieraufgaben-ID
+ccPickingTaskVersion=Version der Kommissionieraufgabe
+ccShippingRequestId=Versandanforderungs-ID
+ccMaterial=Material
+ccQuantity=Menge
+ccUom=Maßeinheit
