--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -103,6 +103,8 @@ ptDhDeliveryItem=Item:
 ptDhMaterial=Material:
 ptDhIconHistoryText=histórico
 ptDhIconHistoryTooltip=histórico
+ptDhIconCheckoutConfirmationText=ID de Confirmação de Checkout
+ptDhIconCheckoutConfirmationTooltip=ID de Confirmação de Checkout
 ptDhIconCreateText=Criar
 ptDhIconCreateTooltip=criar
 ptDhIconRestartText=Reiniciar
@@ -209,3 +211,14 @@ miMerchandiseGroup=Grupo de Mercadorias:
 miProductUUID=UUID do Produto:
 miProductSupplyUUID=UUID de Suprimento do Produto:
 miNoDescription=Sem descrição
+
+# Confirmar Diálogo de Confirmação #
+checkoutConfirmationTitle=IDs de Confirmação de Checkout
+ccConfirmationId=ID de Confirmação
+ccConfirmationRead=Confirmação Lida
+ccPickingTaskId=ID da Tarefa de Coleta
+ccPickingTaskVersion=Versão da Tarefa de Coleta
+ccShippingRequestId=ID da Solicitação de Envio
+ccMaterial=Material
+ccQuantity=Quantidade
+ccUom=Unidade de Medida
