--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -227,3 +227,6 @@ ccShippingRequestId=Shipping Request ID
 ccMaterial=Material
 ccQuantity=Quantity
 ccUom=Unit of Measure
+
+#Clear Messages#
+btnClearMessages=Clear Messages
