--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -200,3 +200,20 @@ ccShippingRequestId=Versandanforderungs-ID
 ccMaterial=Material
 ccQuantity=Menge
 ccUom=Maßeinheit
+
+#Clear Messages#
+btnClearMessages=Benachrichtigungen löschen
+
+# Picking Task Detail Controller #
+ptdWarningNoData=Keine Daten verfügbar
+pdtErrorFetchingData=Beim Abrufen der Daten ist ein Fehler aufgetreten
+pdtErroGettingSelectedItems=Beim Abrufen der ausgewählten Artikel ist ein Fehler aufgetreten
+pdtSelectAtLeastOneItem=Wählen Sie mindestens einen Artikel aus
+pdtNoItemsSelected=Keine Artikel ausgewählt
+pdtErrorFetchingPickingTaskId=Beim Abrufen der Kommissionieraufgaben-ID ist ein Fehler aufgetreten
+pdtPickTaskIdDeleted=Kommissionieraufgaben-ID {0} gelöscht
+pdtInformShippingRequest=Versandanforderung {0}
+pdtInformDeliveryItemMaterial=Artikel {0} Material {1}
+pdtErrorRestartingPickingTask=Beim Neustarten der Kommissionieraufgabe ist ein Fehler aufgetreten {0}
+pdtPickingTaskRestarted=Kommissionieraufgabe {0} erfolgreich neugestartet {1}
+pdtPickingTaskCreated=Kommissionieraufgabe {0} erfolgreich erstellt
