--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -218,7 +218,10 @@ ccConfirmationId=ID de Confirmação
 ccConfirmationRead=Confirmação Lida
 ccPickingTaskId=ID da Tarefa de Coleta
 ccPickingTaskVersion=Versão da Tarefa de Coleta
-ccShippingRequestId=ID da Solicitação de Envio
+ccShippingRequestId=ID da Solicitação de Transporte
 ccMaterial=Material
 ccQuantity=Quantidade
 ccUom=Unidade de Medida
+
+#Clear Messages#
+btnClearMessages=Limpar Mensagens
