--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -179,6 +179,7 @@ pdtInformDeliveryItemMaterial=Delivery {0} / Item {1} / Material {2}
 pdtErrorRestartingPickingTask=Error restarting Picking Task {0}
 pdtPickingTaskRestarted=Picking Task {0} restarted successfully to version {1}
 pdtPickingTaskCreated=Picking Task {0} created successfully
+pdtInformMaterial=Material {0}
 
 # List Controller #
 lvConfirmChangeStatus=Would you like to change the status of the selected Shipping Request {0}?
