--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -217,3 +217,4 @@ pdtInformDeliveryItemMaterial=Artikel {0} Material {1}
 pdtErrorRestartingPickingTask=Beim Neustarten der Kommissionieraufgabe ist ein Fehler aufgetreten {0}
 pdtPickingTaskRestarted=Kommissionieraufgabe {0} erfolgreich neugestartet {1}
 pdtPickingTaskCreated=Kommissionieraufgabe {0} erfolgreich erstellt
+pdtInformMaterial=Material {0}
