--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -175,6 +175,7 @@ pdtInformDeliveryItemMaterial=Entrega {0} / Item {1} / Material {2}
 pdtErrorRestartingPickingTask=Erro ao reiniciar Tarefa de Coleta {0}
 pdtPickingTaskRestarted=Tarefa de Coleta {0} reiniciada com sucesso para a versão {1}
 pdtPickingTaskCreated=Tarefa de Coleta {0} criada com sucesso
+pdtInformMaterial=Material {0}
 
 # List Controller #
 lvConfirmChangeStatus=Você gostaria de alterar o status da Solicitação de Transporte selecionada {0}?
