List Table adjusted

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,7 +22,8 @@ noDataText=No data available
 
 # Filter Section #
 
-fgHeaderGroup=Filter
+fgGroupOne=Order & Customer Details
+fgGroupTwo=Tracking & Ownership
 HeadingTitle=Shipping Requests
 fgShippingRequestItem=Shipping Request Id
 fgShippingRequestIdPlaceholder=Enter Shipping Request Id
