--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -20,7 +20,8 @@ btnCloseTooltip=schließen
 noDataText=Keine Daten verfügbar
 
 # Filter Section #
-fgHeaderGroup=Filter
+fgGroupOne=Bestell- & Kundendetails
+fgGroupTwo=Tracking & Eigentum
 HeadingTitle=Transportanforderungen
 fgShippingRequestItem=Transportanforderungs-ID
 fgShippingRequestIdPlaceholder=Transportanforderungs-ID eingeben
