--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -20,7 +20,8 @@ btnCloseTooltip=fechar
 noDataText=Sem dados disponíveis
 
 # Filter Section #
-fgHeaderGroup=Filter
+fgGroupOne=Detalhes do Pedido & Cliente
+fgGroupTwo=Rastreamento & Propriedade
 HeadingTitle=Solicitações de Transporte
 fgShippingRequestItem=ID da Solicitação de Transporte
 fgShippingRequestIdPlaceholder=Insira o ID da Solicitação de Transporte
