--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -229,6 +229,9 @@ ccShippingRequestId=Shipping Request ID
 ccMaterial=Material
 ccQuantity=Quantity
 ccUom=Unit of Measure
+ccRowIndex=#
 
 #Clear Messages#
 btnClearMessages=Clear Messages
+
+ptSsMaterialNoDescription=No description
