--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -201,6 +201,7 @@ ccShippingRequestId=Versandanforderungs-ID
 ccMaterial=Material
 ccQuantity=Menge
 ccUom=Maßeinheit
+ccRowIndex=#
 
 #Clear Messages#
 btnClearMessages=Benachrichtigungen löschen
@@ -219,3 +220,5 @@ pdtErrorRestartingPickingTask=Beim Neustarten der Kommissionieraufgabe ist ein F
 pdtPickingTaskRestarted=Kommissionieraufgabe {0} erfolgreich neugestartet {1}
 pdtPickingTaskCreated=Kommissionieraufgabe {0} erfolgreich erstellt
 pdtInformMaterial=Material {0}
+
+ptSsMaterialNoDescription=Keine Beschreibung verfügbar
