--- a/webapp/i18n/i18n_pt.properties
+++ b/webapp/i18n/i18n_pt.properties
@@ -224,6 +224,9 @@ ccShippingRequestId=ID da Solicitação de Transporte
 ccMaterial=Material
 ccQuantity=Quantidade
 ccUom=Unidade de Medida
+ccRowIndex=#
 
 #Clear Messages#
 btnClearMessages=Limpar Mensagens
+
+ptSsMaterialNoDescription=Sem descrição
